data/derived/fa15/progs/unify/prog0773.ml.out
Characters 93-115:
  |3 -> buildSine (build (rand,depth-1))
                  ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
